WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297300
Regression(
298532@main
): Test crashes at WebResourceLoadStatisticsStore::stopListeningForStorageAccessPermissionChanges
https://bugs.webkit.org/show_bug.cgi?id=297300
Summary
Regression(298532@main): Test crashes at WebResourceLoadStatisticsStore::stop...
Sihui Liu
Reported
2025-08-12 16:54:27 PDT
0 com.apple.WebKit 0x115ee1544 WTFCrashWithInfo(int, char const*, char const*, int) 1 com.apple.WebKit 0x1183f6c20 WTF::HashTableConstIterator<WTF::HashTable<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashMap<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::FastMalloc>, std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashMap<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>>::checkValidity() const 2 com.apple.WebKit 0x1183f7b60 WTF::HashTableConstIterator<WTF::HashTable<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashMap<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::FastMalloc>, std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashMap<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>>::operator++() 3 com.apple.WebKit 0x1183f7b34 WTF::HashTableIterator<WTF::HashTable<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashMap<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::FastMalloc>, std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashMap<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>>::operator++() 4 com.apple.WebKit 0x11839b228 WTF::HashTableIteratorAdapter<WTF::HashTable<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashMap<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>, WTF::DefaultHash<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::HashTraits<WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>, WTF::HashTableTraits, (WTF::ShouldValidateKey)1, WTF::FastMalloc>::KeyValuePairTraits, WTF::HashTraits<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>>, WTF::FastMalloc>, WTF::KeyValuePair<std::__1::pair<WebCore::RegistrableDomain, WebCore::RegistrableDomain>, WTF::WeakHashSet<WebKit::StorageAccessPermissionChangeObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>>>::operator++() 5 com.apple.WebKit 0x11839afa0 WebKit::WebResourceLoadStatisticsStore::stopListeningForStorageAccessPermissionChanges(WebKit::StorageAccessPermissionChangeObserver&) 6 com.apple.WebKit 0x11812e1a4 WebKit::NetworkConnectionToWebProcess::~NetworkConnectionToWebProcess() 7 com.apple.WebKit 0x11812ef58 WebKit::NetworkConnectionToWebProcess::~NetworkConnectionToWebProcess() 8 com.apple.WebKit 0x11812f070 WebKit::NetworkConnectionToWebProcess::operator delete(WebKit::NetworkConnectionToWebProcess*, std::destroying_delete_t, unsigned long) 9 com.apple.WebKit 0x11812efd8 WebKit::NetworkConnectionToWebProcess::~NetworkConnectionToWebProcess() 10 com.apple.WebKit 0x116fd975c WTF::RefCounted<WebKit::NetworkConnectionToWebProcess>::deref() const 11 com.apple.WebKit 0x116fd9704 WebKit::NetworkConnectionToWebProcess::deref() const 12 com.apple.WebKit 0x118637a1c WTF::DefaultRefDerefTraits<IPC::Connection::Client>::derefIfNotNull(IPC::Connection::Client*) 13 com.apple.WebKit 0x1186379e0 WTF::RefPtr<IPC::Connection::Client, WTF::RawPtrTraits<IPC::Connection::Client>, WTF::DefaultRefDerefTraits<IPC::Connection::Client>>::~RefPtr() 14 com.apple.WebKit 0x1186378bc WTF::RefPtr<IPC::Connection::Client, WTF::RawPtrTraits<IPC::Connection::Client>, WTF::DefaultRefDerefTraits<IPC::Connection::Client>>::~RefPtr() 15 com.apple.WebKit 0x11a5d6c98 IPC::Connection::dispatchDidCloseAndInvalidate()::$_0::operator()() const 16 com.apple.WebKit 0x11a5d6b78 WTF::Detail::CallableWrapper<IPC::Connection::dispatchDidCloseAndInvalidate()::$_0, void>::call() 17 com.apple.JavaScriptCore 0x12babef44 WTF::Function<void ()>::operator()() const 18 com.apple.JavaScriptCore 0x12bb8ce90 WTF::RunLoop::performWork() 19 com.apple.JavaScriptCore 0x12bb94d38 WTF::RunLoop::performWork(void*) 20 com.apple.CoreFoundation 0x180a51cd4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 /AppleInternal/Library/BuildRoots/3f9b1036-2649-11f0-9258-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1970 21 com.apple.CoreFoundation 0x180a51c68 __CFRunLoopDoSource0 + 172 /AppleInternal/Library/BuildRoots/3f9b1036-2649-11f0-9258-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2014 22 com.apple.CoreFoundation 0x180a519d4 __CFRunLoopDoSources0 + 232 /AppleInternal/Library/BuildRoots/3f9b1036-2649-11f0-9258-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2051 23 com.apple.CoreFoundation 0x180a50628 __CFRunLoopRun + 840 /AppleInternal/Library/BuildRoots/3f9b1036-2649-11f0-9258-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2969 24 com.apple.CoreFoundation 0x180a4fc58 CFRunLoopRunSpecific + 572 /AppleInternal/Library/BuildRoots/3f9b1036-2649-11f0-9258-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3434 25 com.apple.Foundation 0x18201ec78 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 /AppleInternal/Library/BuildRoots/3f9b1036-2649-11f0-9258-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:375 26 com.apple.Foundation 0x18209679c -[NSRunLoop(NSRunLoop) run] + 64 /AppleInternal/Library/BuildRoots/3f9b1036-2649-11f0-9258-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:400 27 libxpc.dylib 0x1806789c8 _xpc_objc_main + 700 /AppleInternal/Library/BuildRoots/d4ba7a2c-1f5a-11f0-bb68-0a5c80dde946/Library/Caches/com.apple.xbs/Sources/libxpc/src/main.m:267 28 libxpc.dylib 0x180688fc8 _xpc_main + 40 /AppleInternal/Library/BuildRoots/d4ba7a2c-1f5a-11f0-bb68-0a5c80dde946/Library/Caches/com.apple.xbs/Sources/libxpc/src/init.c:1293 29 libxpc.dylib 0x180678568 xpc_main + 64 /AppleInternal/Library/BuildRoots/d4ba7a2c-1f5a-11f0-bb68-0a5c80dde946/Library/Caches/com.apple.xbs/Sources/libxpc/src/init.c:1376 30 com.apple.WebKit 0x11741f90c WebKit::XPCServiceMain(int, char const**) 31 com.apple.WebKit 0x11a49d070 WKXPCServiceMain 32 com.apple.WebKit.Networking 0x10009c684 main 33 dyld 0x1805c6b98 start + 6076 /AppleInternal/Library/BuildRoots/db3588cd-225b-11f0-8b5b-5e8e1e30ac88/Library/Caches/com.apple.xbs/Sources/dyld/dyld/dyldMain.cpp:1450
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2025-08-12 16:58:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49296
Radar WebKit Bug Importer
Comment 2
2025-08-12 17:04:21 PDT
<
rdar://problem/158176564
>
EWS
Comment 3
2025-08-12 22:24:30 PDT
Committed
298607@main
(f791744039b7): <
https://commits.webkit.org/298607@main
> Reviewed commits have been landed. Closing PR #49296 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug