Regression(298532@main): Test crashes at WebResourceLoadStatisticsStore::stopListeningForStorageAccessPermissionChanges https://bugs.webkit.org/show_bug.cgi?id=297300

Reviewed by Charlie Wolfe.

WebResourceLoadStatisticsStore::stopListeningForStorageAccessPermissionChanges should not remove entry from map while
iterating it.

* Source/WebKit/NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::stopListeningForStorageAccessPermissionChanges):

Canonical link: https://commits.webkit.org/298607@main